<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lytSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTitleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_active"
            android:textSize="36sp"
            />

        <Switch
            android:id="@+id/swActiveAlarm"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/lblTitleSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_sound"
        android:textSize="36sp"
        android:layout_below="@+id/lytSwitch"/>

    <LinearLayout
        android:id="@+id/lytSoundAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lblTitleSound">

        <TextView
            android:id="@+id/lblSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sound"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="20dp"
            android:layout_height="30dp"
            card_view:srcCompat="@drawable/icon_next"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/lblTitleDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_distance"
        android:textSize="36sp"
        android:layout_below="@+id/lytSoundAlarm"
        />
    <LinearLayout
        android:id="@+id/lytDistanceAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lblTitleDistance">

        <TextView
            android:id="@+id/lblDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_distance"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="20dp"
            android:layout_height="30dp"
            card_view:srcCompat="@drawable/icon_next"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/lblTitleUbication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_ubication"
        android:textSize="36sp"
        android:layout_below="@+id/lytDistanceAlarm"/>
    <LinearLayout
        android:id="@+id/lytUbicationAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lblTitleUbication">

        <TextView
            android:id="@+id/lblUbication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ubication"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="20dp"
            android:layout_height="30dp"
            card_view:srcCompat="@drawable/icon_next" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSaveAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:layout_below="@+id/lytUbicationAlarm"/>
</RelativeLayout>